compiler/tests/fuzz/negative_corpus/check_bad_generic_arity.mlc
fn identity<T>(value: T) -> T = value
fn main() -> i32 = identity<i32, string>(1)